# Contracts

contracts/cw20-minter/: Cargo.toml
contracts/cw20-minter/src/: msg.rs
contracts/cw721-minter/artifacts/: cw721_minter.wasm
contracts/cw721-minter/src/: contract.rs  msg.rs  state.rs
contracts/cw721-staking/src/: error.rs  msg.rs
templates/contracts/cw20-minter/src/: contract.rs  error.rs
templates/contracts/cw721-minter/artifacts/: checksums.txt
templates/contracts/cw721-staking/src/: contract.rs  state.rs
templates/web/my-next-app/: package-lock.json
