[package]
name = "cw20-minter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.1.1"
cosmwasm-std    = "1.1.1"
cw-storage-plus = "1.1.0"
cw-utils        = "1.0.0"
schemars = "0.8.15"
semver = "1"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = "1.0.4"
cw20 = "1.1.0"
cw20-base = { version = "1.1.0", features = ["library"] }
cw2 = "1.1.0"

[dev-dependencies]
cw-multi-test = "2.0.0"






